--- a/style.css
+++ b/style.css
@@ -1,18 +1,37 @@
 
-    body {
-      font-family: 'Arial', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+body {
+    font-family: 'Arial', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-      padding-top: 50px;
-    }
+    padding-top: 50px;
+}
 
-    .main-container {
-      width: 70%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
+.main-container {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.top-indicators {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
+}
+.indicator {
+    width: 120px;
+    height: 80px;
+    background-color: rgb(147, 151, 151);
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;       
+    justify-content: center;   
+    gap: 9px;
+}
