--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     justify-content: center;
 
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 .main-container {
@@ -24,8 +24,8 @@ body {
     gap: 30px;
 }
 .top-indicator {
-    width: 120px;
-    height: 80px;
+    width: 100px;
+    height: 60px;
     background-color: rgb(147, 151, 151);
     border-radius: 10px;
 
@@ -38,8 +38,8 @@ body {
 
 .visual-frame {
     margin: 20px;
-    width: 900px;
-    height: 500px;
+    width: 860px;
+    height: 470px;
     background-color: rgb(159, 229, 236);
     border-radius: 20px;
 
@@ -71,6 +71,7 @@ body {
     border-radius: 30px;
     height: 50px;
     width: 140px;
+    margin: 0px 10px;
 }
 
 .reset-button {
@@ -87,5 +88,15 @@ body {
     background-color: rgb(90, 97, 19);
 }
 
+.logs-panel {
+    margin-top: 20px;
+    width: 860px;
+    height: 230px;
+    background-color: rgb(156, 159, 158);
+    border-radius: 20px;
 
+    overflow-y: auto;        
+    padding: 10px;             
+    box-sizing: border-box;    
+}
 
